--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="3dp"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
             style="?android:listSeparatorTextViewStyle"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/reminder_title_label" />
 
         <EditText
-            android:hint="@string/reminder_title_hint"
             android:id="@+id/reminder_title"
-            android:inputType="textAutoCorrect"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" />
+            android:hint="@string/reminder_title_hint"
+            android:inputType="textAutoCorrect" />
 
         <TextView
             style="?android:listSeparatorTextViewStyle"
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/reminder_details_label" />
 
         <LinearLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
-                android:cropToPadding="true"
                 android:id="@+id/reminder_photo"
+                android:layout_width="100dp"
                 android:layout_height="160dp"
                 android:layout_weight="1"
-                android:layout_width="100dp"
+                android:cropToPadding="true"
                 android:visibility="gone" />
 
             <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:layout_width="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/contact_info"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:layout_weight="1"
                     android:visibility="gone" />
 
                 <ImageButton
                     android:id="@+id/call_to_contact_button"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_weight="1"
                     android:src="@drawable/ic_call_call_24dp"
                     android:visibility="gone" />
             </LinearLayout>
@@ -70,69 +70,75 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/checkbox_notification"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/reminder_text"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
                 android:text="Reminder"
                 android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/position_marker"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
                 android:src="@drawable/ic_marker"
                 android:visibility="gone" />
 
-            <EditText
-                android:editable="false"
-                android:focusable="true"
+            <TextView
                 android:id="@+id/position_coordinates"
-                android:inputType="none"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
-                android:layout_width="wrap_content"
+                android:focusable="true"
+                android:inputType="none"
                 android:textIsSelectable="true"
                 android:visibility="gone" />
 
         </LinearLayout>
 
-        <EditText
-            android:hint="@string/reminder_details_label"
-            android:id="@+id/reminder_notes"
+        <TextView
+            android:id="@+id/reminder_qr_code_info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" />
+            android:text="QRCODE"
+            android:visibility="visible"/>
+
+        <EditText
+            android:id="@+id/reminder_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/reminder_details_label" />
 
     </LinearLayout>
 
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/menu"
-        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
+        android:layout_marginBottom="0dp"
         fab:menu_animationDelayPerItem="50"
         fab:menu_backgroundColor="@android:color/transparent"
         fab:menu_buttonSpacing="0dp"
@@ -167,11 +173,11 @@
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/add_photo_reminder_button"
-            android:layout_gravity="bottom|right"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_add_a_photo_white_24dp"
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPressed"
@@ -180,11 +186,11 @@
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/add_contact_reminder_button"
-            android:layout_gravity="bottom|right"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_person_add_white_24dp"
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPressed"
@@ -193,30 +199,29 @@
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/share_reminder_button"
-            android:layout_gravity="bottom|right"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/ic_share_white_24dp"
-
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPressed"
             fab:fab_colorRipple="@color/colorPrimaryDark"
             fab:fab_label="Add share" />
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/notification_reminder_button"
-            android:layout_gravity="bottom|right"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="8dp"
+            android:id="@+id/qr_scan_reminder_button"
             android:layout_width="wrap_content"
-            android:src="@drawable/ic_notifications_none_white_24dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/qrcode_scan"
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPressed"
             fab:fab_colorRipple="@color/colorPrimaryDark"
-            fab:fab_label="Notification disabled" />
+            fab:fab_label="QR" />
     </com.github.clans.fab.FloatingActionMenu>
 
 </RelativeLayout>
