--- a/app/src/main/res/layout/fragment_reminder_list.xml
+++ b/app/src/main/res/layout/fragment_reminder_list.xml
@@ -33,6 +33,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_menu_add" />
