--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="3">
@@ -19,21 +18,15 @@
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:layout_weight="2"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/news_item_title"
             android:layout_width="match_parent"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal" />
-
-        <!--        <TextView-->
-        <!--            android:id="@+id/news_item_pubDate"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="bottom|right"-->
-        <!--            tools:ignore="RtlHardcoded" />-->
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
