--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/news_list"
-        android:name="com.example.organizer.ui.home.NewsListFragment"
+        android:name="com.example.organizer.ui.rss.NewsListFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_news_list" >
         <action
