--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -70,22 +70,25 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/choose_time"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/ic_calendar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center_vertical"
-                android:layout_width="15dp"
-                android:background="@drawable/ic_baseline_calendar_today_24"
-                android:layout_height="15dp" />
+                android:background="@drawable/ic_baseline_calendar_today_24" />
 
             <TextView
                 android:id="@+id/reminder_date_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textSize="50dp"
                 android:visibility="visible" />
         </LinearLayout>
 
